--- a/index.html
+++ b/index.html
@@ -7,5 +7,26 @@
 </head>
 <body>
     <p>Projekti ne webe </p>
+
+    <div class="about-col-1">
+        <img src="./img/the tunnel.png">
+    </div>
+    <div class="about-col-2">
+        <h1 class="sub-title">The Tunnel to Summer,The Exit of Goodbyes</h1>
+        <p>
+            
+            Rumor had it that the <abbr title="Urashima Tunnel">Urashima Tunnel</abbr> defied the laws of space and time. Walk through it and your heart's desire
+awaits on the other side, though at the cost of your own precious years. Kaoru Tono heard this rumor and found
+himself standing before a tunnel that bore an eerie resemblance to the one in the tale. Karen, his sister who passed
+away five years prior, weighed heavily on his mind. Unexpectedly,<i> Anzu Hanashiro</i>, a new transfer student,
+accompanied him and suggested they explore the enigmatic tunnel together. But what does <i> Anzu</i> desire from <i> Kaoru</i>
+in return for her assistance, and how much would he have left to sacrifice when the tunnel has had its way with him?
+        </p>
+        <div class="'tab-titles">
+            <p class="tab-links active-link" onclick="opentab('description1',)">Description</p>
+            <p class="tab-links" onclick="opentab('showtime1')">Showtime</p>
+            <p class="tab-links" onclick="opentab('tickets1')">Tickets</p>
+        </div>
+       
 </body>
 </html>
