--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>CineAnime</title>
+    <title>Cineanime</title>
 </head>
 <body>
     <p>Projekti ne webe </p>
