--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Cineanime</title>
 </head>
 <body>
-    <p>Projekti ne webe </p>
+    <p>Projekti ne web </p>
 
     <div class="about-col-1">
         <img src="./img/the tunnel.png">
