--- a/index.html
+++ b/index.html
@@ -4,10 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Cineanime</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/e0269e10f9.js" crossorigin="anonymous"></script>
+    <link rel="icon" href="img/favicon.jpg.ico" type="image/x-icon">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
 </head>
 <body>
-    <p>Projekti ne web </p>
 
+    <div id="about">
+        <div class="container">
+            <div class="row">
     <div class="about-col-1">
         <img src="./img/the tunnel.png">
     </div>
@@ -32,14 +39,30 @@ in return for her assistance, and how much would he have left to sacrifice when 
                 <li><span>Genre</span><br>Romance</li>
                 <li><span>Duration</span><br>1 h 22min</li>
                 <li><span>Age</span><br>13+</span></li>
+                <li><span>Trailer</span><br><a href="videos/The Tunnel to Summer, The Exit of Goodbyes _ OFFICIAL FILM TRAILER 01 _ Anime Ltd..mp4">Watch</a></li>
             </ul>
         </div>
-       <div class="'tsb-contents" id="tickets4">
+       <div class="'tab-contents" id="showtime1">
         <ul>
-            <li><span> 13:00 </span><br>Tuesday-23-Jaunary</li>
-            <li><span> 16:15 </span><br> Tuesday-23-January</li>
-            <li><span> 19:30 </li> Tuesday-23-January</li>
+            <li><span> 13:00 </span><br>Sunday-21-Jaunary</li>
+            <li><span> 16:15 </span><br> Sunday-21-January</li>
+            <li><span> 19:30 </span><br> Sunday-21-January</li>
         </ul>
-       </div>
+
+        </div>
+
+        <div class="'tab-contents" id="tickets1">
+            <ul>
+                <li><span>Kids</span><br>2.50 &euro;</li>
+                <li><span>Aduts</span><br>4.00 &euro;</li>
+            </ul>
+        </div>
+    </div>
+    </div>
+    </div>
+    </div>
+    
+
+    
 </body>
 </html>
