--- a/index.html
+++ b/index.html
@@ -63,6 +63,36 @@ in return for her assistance, and how much would he have left to sacrifice when 
     </div>
     
 
-    
+    <div id="coming">
+        <div class="container">
+            <h1 class="sub-title">Cooming Soon</h1>
+            <div class="coming-list">
+                <div>
+                    <h2>The Roar of Victory</h2>
+                    <p>Over a 4 day period, a fierce battle takes place between Korean Independence Army and Japanese forces in Manchuria, China. The militia includes Hwang Hae-Cheol (Yu Hae-Jin), who is a master with the sword, and Lee Jang-Ha (Ryu Jun-yeol), who is an expert marksman. Based on the historic battle in 1920, the movie depicts the victory of the Korean Independence Army. </p>
+                    <a href="videos/Sword Art Online the Movie_ Progressive Scherzo of Deep Night - Official Trailer.mp4">Trailer</a>
+                </div>
+            <div>
+            <h2>Great Pretender Razbliuto</h2>
+            <p>It&#39;s been three years since WIT Studio captivated the world with the dizzying tricks and
+                ingenious scenarios that emerged from the &quot;GREAT PRETENDER&quot; series. Now, this
+                all-new action-adventure film follows Dorothy, the self-proclaimed genius con artist who
+                recruited the infamous Laurent Thierry to the life of crime. This time around, she has
+                been defeated at her own game by the Shanghai Longu Bang and is thought to be
+                dead, but she soon reemerges in a small seaside village. Pursued by the underworld of
+                Taipei, she heads to Kyoto, but what will she find waiting for her there...?!</p>
+                <a href="videos/GREAT PRETENDER razbliuto Teaser Trailer (2024).mp4">Trailer</a>
+            </div>
+    <div>
+    <h2>Detective Conan vs. Kid  the Phantom Thief</h2>
+    <p>Conan enters a battle of wits with an elusive master thief known as Kaito Kid and has to stop him from stealing a precious pearl from Sonoko's family aboard a cruise ship.</p>
+    <a href="videos/＜TVシリーズ特別編集版＞『名探偵コナン vs. 怪盗キッド』WEBCM30秒【2024年1月5日(金)公開】.mp4">Trailer</a>
+</div>
+</div>
+</div>
+</div>
+
+
+
 </body>
 </html>
