--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ in return for her assistance, and how much would he have left to sacrifice when 
                 </div>
             <div>
             <h2>Great Pretender Razbliuto</h2>
-            <p>It&#39;s been three years since WIT Studio captivated the world with the dizzying tricks and
+            <p>It's been three years since WIT Studio captivated the world with the dizzying tricks and
                 ingenious scenarios that emerged from the &quot;GREAT PRETENDER&quot; series. Now, this
                 all-new action-adventure film follows Dorothy, the self-proclaimed genius con artist who
                 recruited the infamous Laurent Thierry to the life of crime. This time around, she has
@@ -92,6 +92,32 @@ in return for her assistance, and how much would he have left to sacrifice when 
 </div>
 </div>
 
+
+
+
+<div id="today-list">
+    <div class="container1">
+        <h1 class="sub-title">Today</h1>
+        <div class="'today-list">
+
+
+
+            <div class="today">
+                <img src="./img/black cover.png">
+                <div class="layer">
+                    <h3>The Black Cover</h3>
+                    <p>Set in the world where everyone is given the baility to use magic,the story follows Asta,a young boy  born without any magic power who is given a rare grimoire that grants him anti-magic abilities.With his fellow mages from the Black Bulls ,Asta plans to become th next Wizard King.</p>
+                </div>
+            </div>
+            <div class="today">
+                <img src="./img/the tunnel.png">
+                <div class="layer">
+                    <h3>The Tunnel to Summer</h3>
+                    <p>Kaoru's misplaced guilt over his sister death drives most of his actions.The Tunnel to Summer,the exit of Goodbyes   takes its time to build a bleak picture of Kaoru's sad life.</p>
+                </div>
+            </div>
+
+       
 
 
 </body>
