--- a/index.html
+++ b/index.html
@@ -116,6 +116,14 @@ in return for her assistance, and how much would he have left to sacrifice when 
                     <p>Kaoru's misplaced guilt over his sister death drives most of his actions.The Tunnel to Summer,the exit of Goodbyes   takes its time to build a bleak picture of Kaoru's sad life.</p>
                 </div>
             </div>
+            <div class="today">
+                <img src="./img/silent-voice.png">
+                <div class="layer">
+                    <h3>A Silent Voice</h3>
+                    <p>It follows the story of a former bully socila outcast,who decides to reconnect and befriend the deaf girl he had bullied years prior. </p>
+                </div>
+            </div>
+            </div>
 
        
 
