--- a/index.html
+++ b/index.html
@@ -125,6 +125,12 @@ in return for her assistance, and how much would he have left to sacrifice when 
             </div>
             </div>
 
+
+            <a href="#" class="btn">See more</a>
+            </div>
+            </div>
+        </div>
+
        
 
 
