--- a/index.html
+++ b/index.html
@@ -106,14 +106,14 @@ in return for her assistance, and how much would he have left to sacrifice when 
                 <img src="./img/black cover.png">
                 <div class="layer">
                     <h3>The Black Cover</h3>
-                    <p>Set in the world where everyone is given the baility to use magic,the story follows Asta,a young boy  born without any magic power who is given a rare grimoire that grants him anti-magic abilities.With his fellow mages from the Black Bulls ,Asta plans to become th next Wizard King.</p>
+                    <p>Set in the world where everyone is given the baility to use<b> magic</b>,the story follows Asta,a young boy  born without any magic power who is given a rare grimoire that grants him anti-magic abilities.With his fellow mages from the Black Bulls ,Asta plans to become th next Wizard King.</p>
                 </div>
             </div>
             <div class="today">
                 <img src="./img/the tunnel.png">
                 <div class="layer">
                     <h3>The Tunnel to Summer</h3>
-                    <p>Kaoru's misplaced guilt over his sister death drives most of his actions.The Tunnel to Summer,the exit of Goodbyes   takes its time to build a bleak picture of Kaoru's sad life.</p>
+                    <p>Kaoru's misplaced <u> guilt over his sister death drives most of his actions </u>.The Tunnel to Summer,the exit of Goodbyes   takes its time to build a bleak picture of Kaoru's sad life.</p>
                 </div>
             </div>
             <div class="today">
