--- a/index.html
+++ b/index.html
@@ -131,6 +131,18 @@ in return for her assistance, and how much would he have left to sacrifice when 
             </div>
         </div>
 
+        */qetu osht kontakti*/
+        <div class="contact-right">
+            <h2>Adresa</h2>
+            <p id="address-info"></p>
+        </div>
+    </div>
+</div>
+</div>
+<div>
+    </div>
+</div>
+</div>
        
 
 
