--- a/index.html
+++ b/index.html
@@ -143,7 +143,15 @@ in return for her assistance, and how much would he have left to sacrifice when 
     </div>
 </div>
 </div>
-       
+
+       <script>
+        var addressInfo={
+            street:"Dardania-Prishtinë",
+                    number: "Rr.Ekrem Çabej ",
+           
+        };
+
+       </script>
 
 
 </body>
