--- a/index.html
+++ b/index.html
@@ -150,6 +150,13 @@ in return for her assistance, and how much would he have left to sacrifice when 
                     number: "Rr.Ekrem Çabej ",
            
         };
+        function updateAddressInfo(){
+            var addressElement=document.getElementById("address-info");
+            if(!addressElement)
+            {
+                throw new Error("Elementime id 'address-info' nuk u gjet!");
+            }
+        }
 
        </script>
 
