--- a/index.html
+++ b/index.html
@@ -138,25 +138,29 @@ in return for her assistance, and how much would he have left to sacrifice when 
         </div>
     </div>
 </div>
+    </div</div>
 </div>
-<div>
-    </div>
-</div>
-</div>
+</div</div>
 
        <script>
         var addressInfo={
             street:"Dardania-Prishtinë",
-                    number: "Rr.Ekrem Çabej ",
+          number: "Rr.Ekrem Çabej ",
            
         };
-        function updateAddressInfo(){
-            var addressElement=document.getElementById("address-info");
+        function updateAddressInfo(){ try{
+            var addressElement = document.getElementById("address-info");
             if(!addressElement)
             {
-                throw new Error("Elementime id 'address-info' nuk u gjet!");
+                throw new Error("Elementi me id 'address-info' nuk u gjet!");
             }
+            addressElement.innerText = addressInfo.street + " , " +addresInfo.number;
         }
+        catch  (error) {
+            console.error("Gabim gjatë përditsimit të informacionit  të adresës:",error.message);
+        }}
+
+        updateAddressInfo();
 
        </script>
 
