--- a/index.html
+++ b/index.html
@@ -387,7 +387,29 @@ in return for her assistance, and how much would he have left to sacrifice when 
 </div>
 </div>
 </div>
-<div></div>
+<div id="contact">
+        <div class="container">
+            <div class="row">
+                <div class="contact-left">
+                    <h1 class="sub-title">Contact</h1>
+                    <p><i class="fa-solid fa-paper-plane"></i>cineanime@gmail.com</p>
+                    <p><i class="fa-solid fa-phone-volume"></i>0123456789</p>
+
+                    <div class="social-icons">
+                        <a href="https://facebook.com"><i class="fa-brands fa-facebook"></i></a>
+                        <a href="https://instagram.com"><i class="fa-brands fa-instagram"></i></a>
+                        <a href="https://gmail.com"><i class="fa-solid fa-envelope"></i></a>
+                    </div>
+                </div>
+
+                <div class="contact-right">
+                    <h2>Adresa</h2>
+                    <p id="adress-info"></p>
+                </div>
+            </div>
+        </div>
+
+</div>
 
 
 
