--- a/BuyTickets.html
+++ b/BuyTickets.html
@@ -51,7 +51,14 @@
             <label for="lct">Cinema location</label><br>
             <input type="text" id="lct" name="lct" value="Pristine" disabled><br>
 
-            
+            <label for="movie">Select a movie:</label><br>
+            <select name="movie" id="movie">
+            <option value="movie1">The Tunnel to Summer, the Exit of Goodbyes</option>
+            <option value="movie2">Jujutsu Kaisen</option>
+            <option value="movie3">Sword Art Online the Movie-Orogressive Scherzo of Deep Night </option>
+            <option value="movie4">A Silent Voice</option>
+            <option value="movie5">Black Clover: Sword off the Wizard King</option>
+            </select><br>
 
 
 </body>
