--- a/BuyTickets.html
+++ b/BuyTickets.html
@@ -60,6 +60,22 @@
             <option value="movie5">Black Clover: Sword off the Wizard King</option>
             </select><br>
 
+            <label for="dms">Select watching dimensions:</label><br>
+            <select name="dms" id="dms" required>
+                <option value="2D">2D-Two dimensional</option>
+                <option value="3D">3D-Three dimensional</option>
+            </select><br>
+
+            <label for="time">Select showtime:</label><br>
+            <select name="time" id="time">
+                <option value="13:00">13:00</option>
+                <option value="16:15">16:15</option>
+                <option value="19:30">19:30</option>
+            </select><br>
+
+            
+
+
 
 </body>
 </html>
