--- a/BuyTickets.html
+++ b/BuyTickets.html
@@ -73,7 +73,22 @@
                 <option value="19:30">19:30</option>
             </select><br>
 
+            <label for="phone">Enter a phone number</label><br><br>
+            <input type="tel" id="phone" name="phone" placeholder="04*-***-***" pattern="[0-9]{3}-[0-9]{3}-[0-9]{3}" required maxlength="9" size="9"><br><br>
+
+
+            <label for="Bank">Select your Bank</label><br>
+            <input type="text" list="Bank" name="Bank"  required><br>
+            <datalist id="Bank">
+                <option value="Banka Ekonomike"></option>
+                <option value="TEB"></option>
+                <option value="Raiffaisen Bank"></option>
+                <option value="NLB Bank"></option>
+                <option value="Procredit Bank"></option>
+            </datalist>
             
+
+
 
 
 
