--- a/BuyTickets.html
+++ b/BuyTickets.html
@@ -35,7 +35,7 @@
 
 
 
-            <form action="" method="post"></form>
+            <form action="" method="post">
             <label for="fname">Name:</label><br>
             <input type="text" id="fname" name="fname" placeholder="Enter your name" autofocus required><br>
 
@@ -112,7 +112,28 @@
                 }
             </script>
 
+            <div id="totalPrice" value="totalPrice">Total Price: </div>
+
+            <label for="terms">Accept Terms and Agreements:</label><br>
+             <input type="checkbox" name="terms" id="terms" required><br>
+
+            <label for="dataConfirmation">I confirm that the provided data is mine:</label><br>
+            <input type="checkbox" name="dataConfirmation" id="dataConfirmation" required> <br>
+
+            <input type="submit" value="Download">
+            <input type="submit" value="Print ticket">
+
+
+            </form>
+            <br>
+            <hr>
+
+
             
+
+
+            
+
 
 
 
