--- a/BuyTickets.html
+++ b/BuyTickets.html
@@ -129,7 +129,12 @@
             <hr>
 
 
-            
+            <div class="container pt-5">
+                <h1>Send a message if you sant to reserve a private room for any party holiday, birthday ore a special night </h1>
+
+                <p>we will response your message ib less than 24h for your reservation in the email you sent us. </p>
+                <p>Olease, in the message text-box write what kind of special night you have, the number of persons and much more information  </p>
+            </div>
 
 
             
