--- a/BuyTickets.html
+++ b/BuyTickets.html
@@ -137,6 +137,20 @@
             </div>
 
 
+            <div class="container mt-3">
+
+            <form action="/BuyTickets.html"></form>
+            <div class="mb-3 mt-3">
+                <label for="email">Email from:</label>
+                <input type="email" name="email" id="email" placeholder="example@something.com" required><br>
+                <div class="valid-feedback">Valid.</div>
+                <div class="invalid-feedback">Please fill out this field.</div>
+
+               
+
+            </div>
+
+
             
 
 
