--- a/BuyTickets.html
+++ b/BuyTickets.html
@@ -146,10 +146,18 @@
                 <div class="valid-feedback">Valid.</div>
                 <div class="invalid-feedback">Please fill out this field.</div>
 
-               
+               <label for="em">To:</label>
+               <input type="email" name="em" id="em" value="cineaime@gmail.com" disabled >
 
+               <label for="comment">Message:</label>
+               <textarea class="form-control" name="text" id="comment" rows="5"></textarea>
+               </div>
+               <button type="submit" class="btn btn-primary">Submit</button>
             </div>
-
+        </div>
+        </div>
+        </body>
+        </html>
 
             
 
