--- a/BuyTickets.html
+++ b/BuyTickets.html
@@ -130,10 +130,10 @@
 
 
             <div class="container pt-5">
-                <h1>Send a message if you sant to reserve a private room for any party holiday, birthday ore a special night </h1>
+                <h1>Send a message if you want to reserve a private room for any party, holiday, birthday or a special night </h1>
 
-                <p>we will response your message ib less than 24h for your reservation in the email you sent us. </p>
-                <p>Olease, in the message text-box write what kind of special night you have, the number of persons and much more information  </p>
+                <p>We will response your message in less than 24h for your reservation in the email you sent us. </p>
+                <p>Please, in the message text-box write what kind of special night you have, the number of persons and much more information  </p>
             </div>
 
 
