--- a/BuyTickets.html
+++ b/BuyTickets.html
@@ -139,7 +139,7 @@
 
             <div class="container mt-3">
 
-            <form action="/BuyTickets.html"></form>
+            <form action="/BuyTickets.html">
             <div class="mb-3 mt-3">
                 <label for="email">Email from:</label>
                 <input type="email" name="email" id="email" placeholder="example@something.com" required><br>
@@ -153,6 +153,7 @@
                <textarea class="form-control" name="text" id="comment" rows="5"></textarea>
                </div>
                <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
             </div>
         </div>
         </div>
