--- a/index.html
+++ b/index.html
@@ -387,6 +387,13 @@ in return for her assistance, and how much would he have left to sacrifice when 
 </div>
 </div>
 </div>
+<div id="today-list">
+    <div class="container1">
+        <h1 class="sub-title">Today</h1>
+        <div class="today-list">
+    
+
+
 
 
 <div id="contact">
