--- a/index.html
+++ b/index.html
@@ -394,6 +394,19 @@ in return for her assistance, and how much would he have left to sacrifice when 
     
 
 
+            <div class="today">
+  
+                <img src="./img/black cover.png">
+                <div class="layer">
+                    <h3>The Black Cover</h3>
+                    <p>Set in th world where everyone is given the ability to use magic,th story follows Asta ,a young boy born without any magic power who is given a rare grimoire that grants him anti-magic abilities.With his fellow mages from the Black Bulls, Asta plans to beome the next Wizard King.</p>
+                </div>
+            </div>
+
+            <div class="today">      
+           
+
+
 
 
 <div id="contact">
