--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@ in return for her assistance, and how much would he have left to sacrifice when 
                 </div>
             <div>
             <h2>Great Pretender Razbliuto</h2>
-            <p>It&#39;s been three years since WIT Studio captivated the world with the dizzying tricks and
+            <p>It';s been three years since WIT Studio captivated the world with the dizzying tricks and
                 ingenious scenarios that emerged from the &quot;GREAT PRETENDER&quot; series. Now, this
                 all-new action-adventure film follows Dorothy, the self-proclaimed genius con artist who
                 recruited the infamous Laurent Thierry to the life of crime. This time around, she has
@@ -447,6 +447,7 @@ in return for her assistance, and how much would he have left to sacrifice when 
                         <a href="https://gmail.com"><i class="fa-solid fa-envelope"></i></a>
                     </div>
                 </div>
+           
 
                 <div class="contact-right">
                     <h2>Adresa</h2>
@@ -458,6 +459,8 @@ in return for her assistance, and how much would he have left to sacrifice when 
         
 </div>
 </div>
+
+
 
 <script>
     var addressInfo={
