--- a/index.html
+++ b/index.html
@@ -516,6 +516,22 @@ in return for her assistance, and how much would he have left to sacrifice when 
     });
 </script>
 
+<script type="text/javascript">
+    var counter=1;
+    setInterval(function(){
+        for(var i=1;i<=5;i++){
+            document.getElementById('radio'+i).checked=false;
+        }
+        document.getElementById('radio'+counter).checked=true;
+        counter++;
+
+        if(counter>5){
+            counter=1;
+        }
+    }, 5000);
+
+</script>
+
 
 
 </body>
