--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@ in return for her assistance, and how much would he have left to sacrifice when 
     var tablinks=document.getElementsByClassName("tab-links");
     var tabcontents=document.getElementsByClassName("tab-contents");
 
-    function openTab(tabname){
+    function opentab(tabname){
         for(tablink of tablinks){
             tablink.classList.remove("active-link");
         }
