--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@ relationship are subject to alteration until further notice.
 
                 // Krijo një objekt për informacionin e adresës
                 var addressInfo = {
-                    street: "Dardania-Pejë",
+                    street: "Dardania-Prishtin",
                     number: "Rr.Ekrem Çabej ",
                 };
         
