--- a/FoodDrinks.html
+++ b/FoodDrinks.html
@@ -188,6 +188,73 @@
             });
             </script> 
 
+            <button id="#Juicebutton"><i>Click</i> the button to see <b>Juices Table</b></button>
+            <div id="juices">
+                <h2>JUICES TABLE</h2>
+
+                <table>
+
+                    <tr>
+                        <th>Juices</th>
+                        <th>S</th>
+                        <th>M</th>
+                        <th>L</th>
+                    </tr>
+
+                    <tr>
+                        <th>Apple</th>
+                        <td>1.10 &euro;</td>
+                        <td>1.50 &euro;</td>
+                        <td>1.80 &euro;</td> 
+                    </tr>
+
+                    <tr>
+                        <th>Orange</th>
+                        <td>1.10 &euro;</td>
+                        <td>1.50 &euro;</td>
+                        <td>1.80 &euro;</td> 
+                    </tr>
+
+                    <tr>
+                        <th>Carnberry</th>
+                        <td>1.10 &euro;</td>
+                        <td>1.50 &euro;</td>
+                        <td>1.80 &euro;</td> 
+                    </tr>
+
+                    <tr>
+                        <th>Pineapple</th>
+                        <td>1.10 &euro;</td>
+                        <td>1.50 &euro;</td>
+                        <td>1.80 &euro;</td> 
+                    </tr>
+
+                    <tr>
+                        <th>Mango</th>
+                        <td>1.10 &euro;</td>
+                        <td>1.50 &euro;</td>
+                        <td>1.80 &euro;</td> 
+                    </tr>
+
+                    <tr>
+                        <th>Tropikal</th>
+                        <td>1.10 &euro;</td>
+                        <td>1.50 &euro;</td>
+                        <td>1.80 &euro;</td> 
+                    </tr>
+                </table>
+
+
+            </div>
+
+            <hr>
+            <br><br>
+
+            <!-- EFEKTI FADE -->
+
+            
+            
+
 
 
 
