--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <ul >
                     
                     <li><a href="#about">Movies</a></li>
-                    <li><a href="#coming">Cooming Soon</a></li>
+                    <li><a href="#coming">Coming Soon</a></li>
                     <li><a href="FoodDrinks.html">Food&Drinks</a></li>
                     <li><a href="BuyTickets.html">Buy Tickets</a></li>
                     <li><a  href="aboutUs.html">About Us</a></li>
@@ -373,7 +373,7 @@ relationship are subject to alteration until further notice.
 
     <div id="coming">
         <div class="container">
-            <h1 class="sub-title">Cooming Soon</h1>
+            <h1 class="sub-title">Coming Soon</h1>
             <div class="coming-list">
                 <div>
                     <h2>The Roar of Victory</h2>
