--- a/index.html
+++ b/index.html
@@ -467,8 +467,8 @@ relationship are subject to alteration until further notice.
                         <p><i class="fa-solid fa-paper-plane"></i>cineanime@gmail.com</p>
                         <p><i class="fa-solid fa-phone-volume"></i>0123456789</p>
                         <div class="social-icons">
-                            <a href="https://facebook.com"><i class="fa-brands fa-facebook"></i></a>
-                            <a href="https://instagram.com"><i class="fa-brands fa-instagram"></i></a>
+                            <a href="https://facebook.com" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+                            <a href="https://instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a>
                             <a href="https://gmail.com"><i class="fa-solid fa-envelope"></i></a>
     
                         </div>  
