--- a/BuyTickets.html
+++ b/BuyTickets.html
@@ -142,7 +142,7 @@
             </div>
 
 
-            <div class="container mt-3">
+            <div class="container mt-3" id="mail">
 
             <form action="/BuyTickets.html">
             <div class="mb-3 mt-3">
@@ -157,7 +157,7 @@
                <label for="comment">Message:</label>
                <textarea class="form-control" name="text" id="comment" rows="5"></textarea>
                </div>
-               <button type="submit" class="btn btn-primary">Submit</button>
+               <button type="submit" id="" class="btn btn-primary">Submit</button>
             </form>
             </div>
         </div>
