--- a/BuyTickets.html
+++ b/BuyTickets.html
@@ -39,8 +39,7 @@
 
 
 
-
-            <form action="/BuyTickets.html">
+            <form action="/BuyTickets.html" >
             <label for="fname">Name:</label><br>
             <input type="text" id="fname" name="fname" placeholder="Enter your name" autofocus required><br>
 
@@ -155,9 +154,10 @@
                <input type="email" name="em" id="em" value="cineaime@gmail.com" disabled >
 
                <label for="comment">Message:</label>
-               <textarea class="form-control" name="text" id="comment" rows="5"></textarea>
-               </div>
-               <button type="submit" id="" class="btn btn-primary">Submit</button>
+               <textarea class="form-control" name="text" id="comment" rows="5" required></textarea>
+            </div>
+           
+               <button type="submit" class="btn btn-primary">Submit</button>
             </form>
             </div>
         </div>
